# Astoria

./: .gitignore  CMakeLists.txt  Icons.qrc  LICENSE  README.md  StyleSheet.qss  Styles.qrc
includes/: astoria.hpp  coverartlabel.hpp  durationcontrols.hpp  globals.hpp  librarymodel.hpp  menubar.hpp  metadataeditordialog.hpp  musicscanner.hpp  playercontrols.hpp  playerwindow.hpp  trackinformation.hpp  volumecontrols.hpp
includes/controls/: durationcontrols.hpp  durationslider.hpp  playercontrols.hpp  sensibleslider.hpp  volumecontrols.hpp
includes/delegates/: hoverdelegate.hpp  normaldelegate.hpp
includes/menus/: menubar.hpp  rightclickmenu.hpp
libs/taglib/: libtag.dylib  libtag.so.1  libtag_c.dylib  libtag_c.so.0
source/: astoria.cpp  coverartlabel.cpp  durationcontrols.cpp  globals.cpp  librarymodel.cpp  main.cpp  menubar.cpp  metadataeditordialog.cpp  metadataeditordialog.ui  musicscanner.cpp  playercontrols.cpp  playerwindow.cpp  playerwindow.ui  trackinformation.cpp  volumecontrols.cpp
source/astoria/: audio.cpp  playlist.cpp  ui.cpp
source/controls/: durationcontrols.cpp  durationslider.cpp  playercontrols.cpp  sensibleslider.cpp  volumecontrols.cpp
source/delegates/: hoverdelegate.cpp  normaldelegate.cpp
source/menus/: menubar.cpp  rightclickmenu.cpp
